# icml26-repro-KqMqJpSMnQ-compact-conformal-subgraphs

./: .gitignore  README.md  STATUS.md
docs/: EVIDENCE.md  source_anchors.md
notebooks/: compact_conformal_subgraphs.py
outputs/: claims.json  publication_gate.json
release/: PUBLISHED.md  secret-scan.json  subset-check.json  upload-allowlist.txt  (+1 more)
release/hf-space/: logbook.json  pyproject.toml
release/hf-space/evidence/claim_1/: EVAL.md  claim_contract.json  limitations.md  proof_certificate.json  raw_scale_results.json  source_audit.md  summary.json
release/hf-space/evidence/claim_2/: EVAL.md  independent_checker.json  method.md  negative_control.json  provenance.json
release/hf-space/evidence/claim_3/: EVAL.md  claim_contract.json  independent_checker.json  limitations.md  negative_control.json  provenance.json
release/hf-space/evidence/claim_4/: EVAL.md  claim_contract.json  independent_checker.json  limitations.md  method.md  provenance.json  raw_monte_carlo.json  summary.json
release/hf-space/evidence/claim_5/: EVAL.md  method.md  negative_control.json  provenance.json  source_audit.md  summary.json
release/hf-space/evidence/claim_6/: EVAL.md  claim_contract.json  limitations.md  source_audit.md  summary.json
release/hf-space/pages/campaign-2026-07-claim6/: page.md
release/hf-space/pages/campaign-2026-07-overview/: page.md
release/hf-space/pages/campaign-2026-07-reproducibility/: page.md
release/hf-space/pages/campaign-2026-07-theory/: page.md
release/hf-space/repro/src/: claim6_full.py  claims_theory_full.py  verify_gate.py
(+64 files in other folders)
