[project]
name = "compact-conformal-subgraphs-reproduction"
version = "0.1.0"
description = "CPU-only claim-by-claim reproduction of arXiv:2602.07530"
requires-python = "==3.12.*"
dependencies = [
  "marimo>=0.16,<1",
  "matplotlib>=3.9,<4",
  "networkx>=3.3,<4",
  "numpy>=2.0,<3",
  "scipy>=1.14,<2",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
]

[tool.uv]
package = false
